--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TechReactiveProgramming</title>
+    <title>Reactive Programming Showcase</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -15,6 +15,6 @@
       rel="stylesheet" />
   </head>
   <body class="mat-typography">
-    <app-root class="mat-app-background"></app-root>
+    <app-root></app-root>
   </body>
 </html>
